--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             http-equiv="Content-Security-Policy"
-            content="default-src 'self'; script-src 'self' https://challenges.cloudflare.com; frame-src https://challenges.cloudflare.com;"
+            content="script-src 'self' https://challenges.cloudflare.com; frame-src https://challenges.cloudflare.com;"
         />
         <title>Harry Ng Kok Jing</title>
     </head>
