--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./src/index.css" />
+        <link rel="icon" type="image/x-icon" href="/logo.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Harry Ng Kok Jing</title>
     </head>
